@@ -821,12 +821,12 @@ class Mechanize
     redirect_uri = nil
     referer      = page
 
-    if page.respond_to?(:meta) and (redirect = page.meta.first)
+    if page.respond_to?(:meta_refresh) and (redirect = page.meta_refresh.first)
       redirect_uri = Mechanize::Util.uri_unescape redirect.uri.to_s
       sleep redirect.node['delay'].to_f
       referer = Page.new(nil, {'content-type'=>'text/html'})
     elsif refresh = response['refresh']
-      delay, redirect_uri = Page::MetaRefresh.parse(refresh, uri)
+      delay, redirect_uri = Page::MetaRefresh.parse refresh, uri
       raise Mechanize::Error, 'Invalid refresh http header' unless delay
       raise RedirectLimitReachedError.new(page, redirects) if
         redirects + 1 > redirection_limit
