@@ -1,86 +1,114 @@
 require 'helper'
 
 class TestMechanizePageMetaRefresh < Test::Unit::TestCase
-  MetaRefresh = Mechanize::Page::MetaRefresh
 
-  def test_CONTENT_REGEXP
-    r = MetaRefresh::CONTENT_REGEXP
+  def setup
+    @MR = Mechanize::Page::MetaRefresh
 
-    assert r =~ "0; url=http://localhost:8080/path"
-    assert_equal "0", $1
-    assert_equal "http://localhost:8080/path", $3
-
-    assert r =~ "100.001; url=http://localhost:8080/path"
-    assert_equal "100.001", $1
-    assert_equal "http://localhost:8080/path", $3
-
-    assert r =~ "0; url='http://localhost:8080/path'"
-    assert_equal "0", $1
-    assert_equal "http://localhost:8080/path", $3
-
-    assert r =~ "0; url=\"http://localhost:8080/path\""
-    assert_equal "0", $1
-    assert_equal "http://localhost:8080/path", $3
-
-    assert r =~ "0; url="
-    assert_equal "0", $1
-    assert_equal "", $3
-
-    assert r =~ "0"
-    assert_equal "0", $1
-    assert_equal nil, $3
-
-    assert r =~ "   0;   "
-    assert_equal "0", $1
-    assert_equal nil, $3
-
-    assert r =~ "0; UrL=http://localhost:8080/path"
-    assert_equal "0", $1
-    assert_equal "http://localhost:8080/path", $3
+    @agent = Mechanize.new
+    @uri = URI 'http://example/here/'
   end
 
-  #
-  # parse test
-  #
+  def util_page delay, uri
+    body = <<-BODY
+<head><meta http-equiv="refresh" content="#{delay};url=#{uri}"></head>
+    BODY
 
-  def test_parse
-    uri = URI.parse('http://example/here/')
-
-    assert_equal ['5', 'http://b.example'],
-                 MetaRefresh.parse("5;url=http://b.example", uri)
-    assert_equal ['5', 'http://example/a'],
-                 MetaRefresh.parse("5;url=http://example/a", uri)
-    assert_equal ['5', 'http://example/here/test'],
-                 MetaRefresh.parse("5;url=test", uri)
-    assert_equal ['5', 'http://example/test'],
-                 MetaRefresh.parse("5;url=/test", uri)
-    assert_equal ['5', 'http://example/here/'],
-                 MetaRefresh.parse("5;url=", uri)
-    assert_equal ['5', 'http://example/here/'],
-                 MetaRefresh.parse("5", uri)
-
-    assert_nil MetaRefresh.parse("invalid content", uri)
+    Mechanize::Page.new(@uri, { 'content-type' => 'text/html' }, body, 200,
+                        @agent)
   end
 
-  def test_parse_block
-    uri = URI 'http://example'
-    yielded = false
-
-    result = MetaRefresh.parse('5;url=/a', uri) { |delay, url|
-      assert_equal '5', delay
-      assert_equal 'http://example/a', url
-      yielded = :yielded
-    }
-
-    assert yielded
-
-    assert_equal :yielded, result
+  def util_meta_refresh page
+    node = page.search('meta').first
+    @MR.from_node node, page, @uri
   end
 
-  def test_parse_invalid
-    uri = URI.parse('http://example/')
+  def test_class_parse
+    delay, uri = @MR.parse "0; url=http://localhost:8080/path", @uri
+    assert_equal "0", delay
+    assert_equal "http://localhost:8080/path", uri.to_s
 
-    assert_nil MetaRefresh.parse("invalid content", uri)
+    delay, uri = @MR.parse "100.001; url=http://localhost:8080/path", @uri
+    assert_equal "100.001", delay
+    assert_equal "http://localhost:8080/path", uri.to_s
+
+    delay, uri = @MR.parse "0; url='http://localhost:8080/path'", @uri
+    assert_equal "0", delay
+    assert_equal "http://localhost:8080/path", uri.to_s
+
+    delay, uri = @MR.parse "0; url=\"http://localhost:8080/path\"", @uri
+    assert_equal "0", delay
+    assert_equal "http://localhost:8080/path", uri.to_s
+
+    delay, uri = @MR.parse "0; url=", @uri
+    assert_equal "0", delay
+    assert_equal "http://example/here/", uri.to_s
+
+    delay, uri = @MR.parse "0", @uri
+    assert_equal "0", delay
+    assert_equal "http://example/here/", uri.to_s
+
+    delay, uri = @MR.parse "   0;   ", @uri
+    assert_equal "0", delay
+    assert_equal "http://example/here/", uri.to_s
+
+    delay, uri = @MR.parse "0; UrL=http://localhost:8080/path", @uri
+    assert_equal "0", delay
+    assert_equal "http://localhost:8080/path", uri.to_s
+  end
+
+  def test_class_from_node
+    page = util_page 5, 'http://b.example'
+    link = util_meta_refresh page
+    assert_equal 5, link.delay
+    assert_equal 'http://b.example', link.href
+
+    page = util_page 5, 'http://example/a'
+    link = util_meta_refresh page
+    assert_equal 5, link.delay
+    assert_equal 'http://example/a', link.href
+
+    page = util_page 5, 'test'
+    link = util_meta_refresh page
+    assert_equal 5, link.delay
+    assert_equal 'http://example/here/test', link.href
+
+    page = util_page 5, '/test'
+    link = util_meta_refresh page
+    assert_equal 5, link.delay
+    assert_equal 'http://example/test', link.href
+
+    page = util_page 5, nil
+    link = util_meta_refresh page
+    assert_equal 5, link.delay
+    assert_equal 'http://example/here/', link.href
+
+    page = util_page 5, @uri
+    link = util_meta_refresh page
+    assert_equal 5, link.delay
+    assert_equal 'http://example/here/', link.href
+  end
+
+  def test_class_from_node_no_content
+    body = <<-BODY
+<head><meta http-equiv="refresh"></head>
+    BODY
+
+    page = Mechanize::Page.new(@uri, { 'content-type' => 'text/html' }, body,
+                               200, @agent)
+
+    assert_nil util_meta_refresh page
+  end
+
+  def test_class_from_node_not_refresh
+    body = <<-BODY
+<head><meta http-equiv="other-thing" content="0;"></head>
+    BODY
+
+    page = Mechanize::Page.new(@uri, { 'content-type' => 'text/html' }, body,
+                               200, @agent)
+
+    assert_nil util_meta_refresh page
   end
 
 end
